fix: adding datasets dependency

--- a/notebooks/test_basics.ipynb
+++ b/notebooks/test_basics.ipynb
@@ -92,33 +92,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[37m2025-01-03 22:16:55 [INFO] loads: Dataset LOADED from \"hf://incantor/aesthetic_eagle_5category_iter99\" in 1.59 seconds   [HuggingFaceBackend:None -> datasets.arrow_dataset.Dataset]\u001b[0m\n"
+      "\u001b[37m2025-01-03 22:27:08 [INFO] loads: Dataset LOADED from \"hf://incantor/aesthetic_eagle_5category_iter99\" in 1.66 seconds\u001b[0m\n"
      ]
     }
    ],
    "source": [
     "import unibox as ub\n",
-    "hf_df = ub.loads(\"hf://incantor/aesthetic_eagle_5category_iter99\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "\"<class 'datasets.arrow_dataset.Dataset'>\""
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "str(type(hf_df))"
+    "hf_dset = ub.loads(\"hf://incantor/aesthetic_eagle_5category_iter99\")"
    ]
   },
   {
@@ -326,7 +306,7 @@
     }
    ],
    "source": [
-    "test_df = hf_df.to_pandas().head()\n",
+    "test_df = hf_dset.to_pandas().head()\n",
     "test_df"
    ]
   },
