tweak: adding global download dir and ephemeral files

--- a/notebooks/test_basics.ipynb
+++ b/notebooks/test_basics.ipynb
@@ -4,9 +4,31 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using global temporary directory: /tmp/unibox_temp\n"
+     ]
+    }
+   ],
    "source": [
     "import unibox as ub"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Load tests:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### local:"
    ]
   },
   {
@@ -80,7 +102,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "huggingface test:"
+    "### huggingface:"
    ]
   },
   {
@@ -361,6 +383,95 @@
    ],
    "source": [
     "ub.saves(test_df, \"hf://datatmp/tmp_df\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### s3:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[37m2025-01-03 23:47:26 [INFO] loads: list LOADED from \"s3://bucket-external/misc/yada_store/configs/clip_prompts_list_full_v2.txt\" in 0.81 seconds\u001b[0m\n"
+     ]
+    }
+   ],
+   "source": [
+    "prompts_list = ub.loads(\"s3://bucket-external/misc/yada_store/configs/clip_prompts_list_full_v2.txt\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## traverse tests:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['/lv0/yada/unibox/src/unibox/backends/backend_router.py',\n",
+       " '/lv0/yada/unibox/src/unibox/backends/local_backend.py',\n",
+       " '/lv0/yada/unibox/src/unibox/backends/hf_backend.py',\n",
+       " '/lv0/yada/unibox/src/unibox/backends/__init__.py',\n",
+       " '/lv0/yada/unibox/src/unibox/backends/__pycache__',\n",
+       " '/lv0/yada/unibox/src/unibox/backends/s3_backend.py',\n",
+       " '/lv0/yada/unibox/src/unibox/backends/base_backend.py']"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ub.ls(\"/lv0/yada/unibox/src/unibox/backends\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['s3://dataset-ingested/temp/danbooru_meta/',\n",
+       " 's3://dataset-ingested/temp/pref-csv/',\n",
+       " 's3://dataset-ingested/temp/2step.parquet',\n",
+       " 's3://dataset-ingested/temp/2xlargep1.tar',\n",
+       " 's3://dataset-ingested/temp/cfed.log',\n",
+       " 's3://dataset-ingested/temp/dbr_chara_meta_2m_6408-4300.parquet',\n",
+       " 's3://dataset-ingested/temp/direct.parquet',\n",
+       " 's3://dataset-ingested/temp/direct_no_disk.parquet',\n",
+       " 's3://dataset-ingested/temp/niji5_partial_jsons.zip',\n",
+       " 's3://dataset-ingested/temp/pref-shuffled.jsonl',\n",
+       " 's3://dataset-ingested/temp/preference_demo_60.zip',\n",
+       " 's3://dataset-ingested/temp/tag_freq_chara_2m_6408-4300.json',\n",
+       " 's3://dataset-ingested/temp/tag_freq_copyright_2m_6408-4300.json']"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ub.ls(\" s3://dataset-ingested/temp/\")"
    ]
   }
  ],
