tweak: adding back classic functionalities from ub.traverses()

--- a/notebooks/test_basics.ipynb
+++ b/notebooks/test_basics.ipynb
@@ -461,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -476,7 +476,7 @@
        " '/lv0/yada/unibox/src/unibox/backends/base_backend.py']"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -487,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -495,6 +495,7 @@
       "text/plain": [
        "['s3://dataset-ingested/temp/danbooru_meta/',\n",
        " 's3://dataset-ingested/temp/pref-csv/',\n",
+       " 's3://dataset-ingested/temp/unibox_debug/',\n",
        " 's3://dataset-ingested/temp/2step.parquet',\n",
        " 's3://dataset-ingested/temp/2xlargep1.tar',\n",
        " 's3://dataset-ingested/temp/cfed.log',\n",
@@ -508,13 +509,31 @@
        " 's3://dataset-ingested/temp/tag_freq_copyright_2m_6408-4300.json']"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "ub.ls(\" s3://dataset-ingested/temp/\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## concurrency test:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "files = ub.ls(\"/rmt/image_data/dataset-ingested/gallery-dl/twitter/\")\n",
+    "\n",
+    "# imgs = ub.concurrent_loads(files)"
    ]
   }
  ],
