tweak: adding traverses() compatability support

--- a/notebooks/test_basics.ipynb
+++ b/notebooks/test_basics.ipynb
@@ -527,11 +527,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "a30edf26941946a49df408105ea748a5",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Listing local files: 0files [00:00, ?files/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "files = ub.ls(\"/rmt/image_data/dataset-ingested/gallery-dl/twitter/\")\n",
+    "files = ub.ls(\"/rmt/image_data/dataset-ingested/gallery-dl/twitter/shn_sik\", relative_unix=True)\n",
     "\n",
     "# imgs = ub.concurrent_loads(files)"
    ]
