tests: adding ub.ls() tests for local backend

--- a/notebooks/test_basics.ipynb
+++ b/notebooks/test_basics.ipynb
@@ -527,13 +527,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a30edf26941946a49df408105ea748a5",
+       "model_id": "88fd56c4a2ef4a4bb4639aecbd06fdf9",
        "version_major": 2,
        "version_minor": 0
       },
@@ -543,11 +543,125 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "['/rmt/image_data/dataset-ingested/gallery-dl/twitter/shn_sik/1290233608712544256_1.jpg',\n",
+       " '/rmt/image_data/dataset-ingested/gallery-dl/twitter/shn_sik/1290233608712544256_2.jpg',\n",
+       " '/rmt/image_data/dataset-ingested/gallery-dl/twitter/shn_sik/1290233608712544256_3.jpg',\n",
+       " '/rmt/image_data/dataset-ingested/gallery-dl/twitter/shn_sik/1290233608712544256_4.jpg',\n",
+       " '/rmt/image_data/dataset-ingested/gallery-dl/twitter/shn_sik/1290235647559516160_1.jpg',\n",
+       " '/rmt/image_data/dataset-ingested/gallery-dl/twitter/shn_sik/1292076477215731713_1.jpg',\n",
+       " '/rmt/image_data/dataset-ingested/gallery-dl/twitter/shn_sik/1292076477215731713_2.jpg',\n",
+       " '/rmt/image_data/dataset-ingested/gallery-dl/twitter/shn_sik/1292807309639393280_1.jpg',\n",
+       " '/rmt/image_data/dataset-ingested/gallery-dl/twitter/shn_sik/1293149615231864832_1.jpg',\n",
+       " '/rmt/image_data/dataset-ingested/gallery-dl/twitter/shn_sik/1295322924530851840_1.jpg',\n",
+       " '/rmt/image_data/dataset-ingested/gallery-dl/twitter/shn_sik/1295322924530851840_2.jpg',\n",
+       " '/rmt/image_data/dataset-ingested/gallery-dl/twitter/shn_sik/1300474908552491009_1.jpg',\n",
+       " '/rmt/image_data/dataset-ingested/gallery-dl/twitter/shn_sik/1300474908552491009_2.jpg',\n",
+       " '/rmt/image_data/dataset-ingested/gallery-dl/twitter/shn_sik/1300664113224232960_1.jpg',\n",
+       " '/rmt/image_data/dataset-ingested/gallery-dl/twitter/shn_sik/1310958234359009282_1.jpg',\n",
+       " '/rmt/image_data/dataset-ingested/gallery-dl/twitter/shn_sik/1328332333557055489_1.jpg',\n",
+       " '/rmt/image_data/dataset-ingested/gallery-dl/twitter/shn_sik/1338058198536753152_1.jpg',\n",
+       " '/rmt/image_data/dataset-ingested/gallery-dl/twitter/shn_sik/1343598063319838724_1.jpg',\n",
+       " '/rmt/image_data/dataset-ingested/gallery-dl/twitter/shn_sik/1345017391734874112_1.jpg',\n",
+       " '/rmt/image_data/dataset-ingested/gallery-dl/twitter/shn_sik/1345017391734874112_2.jpg',\n",
+       " '/rmt/image_data/dataset-ingested/gallery-dl/twitter/shn_sik/1351879499294494720_1.jpg',\n",
+       " '/rmt/image_data/dataset-ingested/gallery-dl/twitter/shn_sik/1355524262765887496_1.jpg',\n",
+       " '/rmt/image_data/dataset-ingested/gallery-dl/twitter/shn_sik/1356804149560578048_1.jpg',\n",
+       " '/rmt/image_data/dataset-ingested/gallery-dl/twitter/shn_sik/1365340884439470084_1.jpg',\n",
+       " '/rmt/image_data/dataset-ingested/gallery-dl/twitter/shn_sik/1365616590138400770_1.jpg',\n",
+       " '/rmt/image_data/dataset-ingested/gallery-dl/twitter/shn_sik/1366970383954415616_1.jpg',\n",
+       " '/rmt/image_data/dataset-ingested/gallery-dl/twitter/shn_sik/1369270462228746246_1.jpg',\n",
+       " '/rmt/image_data/dataset-ingested/gallery-dl/twitter/shn_sik/1375007952386465795_1.jpg',\n",
+       " '/rmt/image_data/dataset-ingested/gallery-dl/twitter/shn_sik/1383394341419290635_1.jpg',\n",
+       " '/rmt/image_data/dataset-ingested/gallery-dl/twitter/shn_sik/1383394341419290635_2.jpg',\n",
+       " '/rmt/image_data/dataset-ingested/gallery-dl/twitter/shn_sik/1383394341419290635_3.jpg',\n",
+       " '/rmt/image_data/dataset-ingested/gallery-dl/twitter/shn_sik/1385545125044969478_1.jpg',\n",
+       " '/rmt/image_data/dataset-ingested/gallery-dl/twitter/shn_sik/1386342106810122243_1.jpg',\n",
+       " '/rmt/image_data/dataset-ingested/gallery-dl/twitter/shn_sik/1388538513579069442_1.jpg',\n",
+       " '/rmt/image_data/dataset-ingested/gallery-dl/twitter/shn_sik/1392076261262954500_1.jpg',\n",
+       " '/rmt/image_data/dataset-ingested/gallery-dl/twitter/shn_sik/1392076261262954500_2.jpg',\n",
+       " '/rmt/image_data/dataset-ingested/gallery-dl/twitter/shn_sik/1393867035336069126_1.jpg',\n",
+       " '/rmt/image_data/dataset-ingested/gallery-dl/twitter/shn_sik/1393867035336069126_2.jpg',\n",
+       " '/rmt/image_data/dataset-ingested/gallery-dl/twitter/shn_sik/1395059720650584068_1.jpg',\n",
+       " '/rmt/image_data/dataset-ingested/gallery-dl/twitter/shn_sik/1411058845992898562_1.jpg',\n",
+       " '/rmt/image_data/dataset-ingested/gallery-dl/twitter/shn_sik/1413548315136851968_1.jpg',\n",
+       " '/rmt/image_data/dataset-ingested/gallery-dl/twitter/shn_sik/1414984895265263617_1.jpg',\n",
+       " '/rmt/image_data/dataset-ingested/gallery-dl/twitter/shn_sik/1416371337057030144_1.jpg',\n",
+       " '/rmt/image_data/dataset-ingested/gallery-dl/twitter/shn_sik/1416679655134797827_1.jpg',\n",
+       " '/rmt/image_data/dataset-ingested/gallery-dl/twitter/shn_sik/1429851002073600000_1.jpg',\n",
+       " '/rmt/image_data/dataset-ingested/gallery-dl/twitter/shn_sik/1439160786526486531_1.jpg',\n",
+       " '/rmt/image_data/dataset-ingested/gallery-dl/twitter/shn_sik/1460959242366509062_1.jpg',\n",
+       " '/rmt/image_data/dataset-ingested/gallery-dl/twitter/shn_sik/1460959242366509062_2.jpg',\n",
+       " '/rmt/image_data/dataset-ingested/gallery-dl/twitter/shn_sik/1470741917755670531_1.jpg',\n",
+       " '/rmt/image_data/dataset-ingested/gallery-dl/twitter/shn_sik/1475914256231329792_1.jpg',\n",
+       " '/rmt/image_data/dataset-ingested/gallery-dl/twitter/shn_sik/1493881887777234946_1.jpg',\n",
+       " '/rmt/image_data/dataset-ingested/gallery-dl/twitter/shn_sik/1500391062502010881_1.jpg',\n",
+       " '/rmt/image_data/dataset-ingested/gallery-dl/twitter/shn_sik/1539258951044583425_1.jpg',\n",
+       " '/rmt/image_data/dataset-ingested/gallery-dl/twitter/shn_sik/1542502817172430849_1.jpg',\n",
+       " '/rmt/image_data/dataset-ingested/gallery-dl/twitter/shn_sik/1546485439594627073_1.jpg',\n",
+       " '/rmt/image_data/dataset-ingested/gallery-dl/twitter/shn_sik/1547598918145703936_1.jpg',\n",
+       " '/rmt/image_data/dataset-ingested/gallery-dl/twitter/shn_sik/1547598918145703936_2.jpg',\n",
+       " '/rmt/image_data/dataset-ingested/gallery-dl/twitter/shn_sik/1549040975494135808_1.jpg',\n",
+       " '/rmt/image_data/dataset-ingested/gallery-dl/twitter/shn_sik/1559067312028008448_1.jpg',\n",
+       " '/rmt/image_data/dataset-ingested/gallery-dl/twitter/shn_sik/1562298228540055552_1.jpg',\n",
+       " '/rmt/image_data/dataset-ingested/gallery-dl/twitter/shn_sik/1564598372291706881_1.jpg',\n",
+       " '/rmt/image_data/dataset-ingested/gallery-dl/twitter/shn_sik/1564598372291706881_2.jpg',\n",
+       " '/rmt/image_data/dataset-ingested/gallery-dl/twitter/shn_sik/1564598372291706881_3.jpg',\n",
+       " '/rmt/image_data/dataset-ingested/gallery-dl/twitter/shn_sik/1568501087610744832_1.jpg',\n",
+       " '/rmt/image_data/dataset-ingested/gallery-dl/twitter/shn_sik/1574999038470270978_1.jpg',\n",
+       " '/rmt/image_data/dataset-ingested/gallery-dl/twitter/shn_sik/1601865433451474944_1.jpg',\n",
+       " '/rmt/image_data/dataset-ingested/gallery-dl/twitter/shn_sik/1602980515002617857_1.jpg',\n",
+       " '/rmt/image_data/dataset-ingested/gallery-dl/twitter/shn_sik/1616436746736263168_1.jpg',\n",
+       " '/rmt/image_data/dataset-ingested/gallery-dl/twitter/shn_sik/1616436746736263168_2.jpg',\n",
+       " '/rmt/image_data/dataset-ingested/gallery-dl/twitter/shn_sik/1620131227520077824_1.jpg',\n",
+       " '/rmt/image_data/dataset-ingested/gallery-dl/twitter/shn_sik/1624715330202525696_1.jpg',\n",
+       " '/rmt/image_data/dataset-ingested/gallery-dl/twitter/shn_sik/1638195059798732801_1.jpg',\n",
+       " '/rmt/image_data/dataset-ingested/gallery-dl/twitter/shn_sik/1642522119136489478_1.jpg',\n",
+       " '/rmt/image_data/dataset-ingested/gallery-dl/twitter/shn_sik/1645441047793926144_1.jpg',\n",
+       " '/rmt/image_data/dataset-ingested/gallery-dl/twitter/shn_sik/1656217840385658886_1.jpg',\n",
+       " '/rmt/image_data/dataset-ingested/gallery-dl/twitter/shn_sik/1663299185620434944_1.jpg',\n",
+       " '/rmt/image_data/dataset-ingested/gallery-dl/twitter/shn_sik/1673282604970422275_1.jpg',\n",
+       " '/rmt/image_data/dataset-ingested/gallery-dl/twitter/shn_sik/1674094690814267392_1.jpg',\n",
+       " '/rmt/image_data/dataset-ingested/gallery-dl/twitter/shn_sik/1674094690814267392_2.jpg',\n",
+       " '/rmt/image_data/dataset-ingested/gallery-dl/twitter/shn_sik/1678343001100398592_1.jpg',\n",
+       " '/rmt/image_data/dataset-ingested/gallery-dl/twitter/shn_sik/1678756446815813632_1.jpg',\n",
+       " '/rmt/image_data/dataset-ingested/gallery-dl/twitter/shn_sik/1679870468432723968_1.jpg',\n",
+       " '/rmt/image_data/dataset-ingested/gallery-dl/twitter/shn_sik/1692159600425107703_1.jpg',\n",
+       " '/rmt/image_data/dataset-ingested/gallery-dl/twitter/shn_sik/1695770557575512458_1.jpg',\n",
+       " '/rmt/image_data/dataset-ingested/gallery-dl/twitter/shn_sik/1711261718603862273_1.jpg',\n",
+       " '/rmt/image_data/dataset-ingested/gallery-dl/twitter/shn_sik/1721531861762011355_1.jpg',\n",
+       " '/rmt/image_data/dataset-ingested/gallery-dl/twitter/shn_sik/1737828902389834048_1.jpg',\n",
+       " '/rmt/image_data/dataset-ingested/gallery-dl/twitter/shn_sik/1749057454691029324_1.jpg',\n",
+       " '/rmt/image_data/dataset-ingested/gallery-dl/twitter/shn_sik/1749057454691029324_2.jpg']"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
+    "\n",
+    "# ls a folder of jpg files, ensure they all have absolute paths\n",
+    "files = ub.ls(\"/rmt/image_data/dataset-ingested/gallery-dl/twitter/shn_sik\")\n",
+    "files\n",
+    "\n",
+    "# ls a folder with relative_unix=True, ensure they all have relative paths\n",
     "files = ub.ls(\"/rmt/image_data/dataset-ingested/gallery-dl/twitter/shn_sik\", relative_unix=True)\n",
     "\n",
+    "# ls a folder with 6 jpg files, 3 json files and a parquet file, ensure exts works\n",
+    "files = ub.ls(\"/rmt/image_data/dataset-ingested/gallery-dl/twitter/shn_sik\", exts=[\"jpg\", \"json\"])\n",
+    "\n",
+    "\n",
+    "# use old api (traverses) and make sure a DeprecationWarning is raised, and the result is the same\n",
+    "files = ub.ls(\"/rmt/image_data/dataset-ingested/gallery-dl/twitter/shn_sik\", relative_unix=True)\n",
+    "files2 = ub.traverses(\"/rmt/image_data/dataset-ingested/gallery-dl/twitter/shn_sik\", elative_unix=True)\n",
+    "assert files == files2\n",
+    "\n",
+    "#\n",
     "# imgs = ub.concurrent_loads(files)"
    ]
   }
