tests: adding peeks(), gallery() tests

--- a/notebooks/test_basics.ipynb
+++ b/notebooks/test_basics.ipynb
@@ -527,77 +527,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "# ls a folder of jpg files, ensure they all have absolute paths\n",
-    "files = ub.ls(\"/rmt/image_data/dataset-ingested/gallery-dl/twitter/shn_sik\")\n",
-    "files\n",
-    "\n",
-    "# ls a folder with relative_unix=True, ensure they all have relative paths\n",
-    "files = ub.ls(\"/rmt/image_data/dataset-ingested/gallery-dl/twitter/shn_sik\", relative_unix=True)\n",
-    "\n",
-    "# ls a folder with 6 jpg files, 3 json files and a parquet file, ensure exts works\n",
-    "files = ub.ls(\"/rmt/image_data/dataset-ingested/gallery-dl/twitter/shn_sik\", exts=[\"jpg\", \"json\"])\n",
-    "\n",
-    "\n",
-    "# use old api (traverses) and make sure a DeprecationWarning is raised, and the result is the same\n",
-    "files = ub.ls(\"/rmt/image_data/dataset-ingested/gallery-dl/twitter/shn_sik\", relative_unix=True)\n",
-    "files2 = ub.traverses(\"/rmt/image_data/dataset-ingested/gallery-dl/twitter/shn_sik\", elative_unix=True)\n",
-    "assert files == files2\n",
-    "\n",
-    "#\n",
-    "# imgs = ub.concurrent_loads(files)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## peeker test:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[37m2025-01-04 08:33:38 [INFO] loads: dict LOADED from \"../tests/test_files/sample.json\" in 0.00 seconds\u001b[0m\n"
-     ]
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "c7dce5a0cc874eed858c37385ebb7954",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Listing local files: 0files [00:00, ?files/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "f734b62d9f76412789fa74d1ba83177c",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Loading batches:   0%|          | 0/89 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     },
     {
      "data": {
       "text/plain": [
-       "{'metadata': {'len': 1, 'value_types': {'dict': 1}, 'is_nested': True},\n",
-       " 'preview': [('quiz',\n",
-       "   {'sport': {'q1': {'question': 'Which one is correct team name in NBA?',\n",
-       "      'options': ['New York Bulls',\n",
-       "       'Los Angeles Kings',\n",
-       "       'Golden State Warriros',\n",
-       "       'Huston Rocket'],\n",
-       "      'answer': 'Huston Rocket'}},\n",
-       "    'maths': {'q1': {'question': '5 + 7 = ?',\n",
-       "      'options': ['10', '11', '12', '13'],\n",
-       "      'answer': '12'},\n",
-       "     'q2': {'question': '12 - 8 = ?',\n",
-       "      'options': ['1', '2', '3', '4'],\n",
-       "      'answer': '4'}}})]}"
+       "{'metadata': {'len': 89, 'item_type': 'JpegImageFile'},\n",
+       " 'preview': [<PIL.JpegImagePlugin.JpegImageFile image mode=RGB size=1330x2048>,\n",
+       "  <PIL.JpegImagePlugin.JpegImageFile image mode=RGB size=1670x2048>,\n",
+       "  <PIL.JpegImagePlugin.JpegImageFile image mode=RGB size=1536x2048>]}"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "json_dict = ub.loads(\"../tests/test_files/sample.json\")\n",
-    "ub.peeks(json_dict)"
+    "# ls a folder of jpg files, ensure they all have absolute paths\n",
+    "files = ub.ls(\"/rmt/image_data/dataset-ingested/gallery-dl/twitter/shn_sik\")\n",
+    "imgs = ub.concurrent_loads(files)\n",
+    "ub.peeks(imgs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ub.gallery(files)"
    ]
   }
  ],
