feat: adding toml / yaml loaders

--- a/notebooks/test_basics.ipynb
+++ b/notebooks/test_basics.ipynb
@@ -587,6 +587,44 @@
    "source": [
     "ub.gallery(files)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Loader tests:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using global temporary directory: /tmp/unibox_temp\n",
+      "\u001b[37m2025-02-14 03:48:53 [INFO] loads: dict LOADED from \"../tests/test_files/sample.toml\" in 0.00s\u001b[0m\n",
+      "{'name': 'Anime Rating System', 'version': 1.0, 'categories': [{'name': 'Proportions', 'description': 'Evaluates the correctness of body proportions.', 'weight': 0.4}, {'name': 'Pose Accuracy', 'description': 'Checks if the pose follows realistic constraints.', 'weight': 0.3}, {'name': 'Structural Consistency', 'description': 'Ensures body parts are correctly connected.', 'weight': 0.3}], 'raters': [{'id': 101, 'name': 'RaterA', 'availability': 'high', 'assigned_images': 2000}, {'id': 102, 'name': 'RaterB', 'availability': 'medium', 'assigned_images': 1000}, {'id': 103, 'name': 'RaterC', 'availability': 'low', 'assigned_images': 500}]}\n",
+      "\u001b[37m2025-02-14 03:48:53 [INFO] loads: dict LOADED from \"../tests/test_files/sample.yaml\" in 0.00s\u001b[0m\n",
+      "{'name': 'Anime Rating System', 'version': 1.0, 'categories': [{'name': 'Proportions', 'description': 'Evaluates the correctness of body proportions.', 'weight': 0.4}, {'name': 'Pose Accuracy', 'description': 'Checks if the pose follows realistic constraints.', 'weight': 0.3}, {'name': 'Structural Consistency', 'description': 'Ensures body parts are correctly connected.', 'weight': 0.3}], 'raters': [{'id': 101, 'name': 'RaterA', 'availability': 'high', 'assigned_images': 2000}, {'id': 102, 'name': 'RaterB', 'availability': 'medium', 'assigned_images': 1000}, {'id': 103, 'name': 'RaterC', 'availability': 'low', 'assigned_images': 500}]}\n"
+     ]
+    }
+   ],
+   "source": [
+    "import unibox as ub\n",
+    "\n",
+    "sample_toml_file = \"../tests/test_files/sample.toml\"\n",
+    "sample_yaml_file = \"../tests/test_files/sample.yaml\"\n",
+    "\n",
+    "\n",
+    "file = ub.loads(sample_toml_file)\n",
+    "print(file)\n",
+    "\n",
+    "file = ub.loads(sample_yaml_file)\n",
+    "print(file)"
+   ]
   }
  ],
  "metadata": {
@@ -605,7 +643,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.10.16"
   }
  },
  "nbformat": 4,
