fix: incorrect huggingface data upload behavior when using datasets

--- a/notebooks/test_basics.ipynb
+++ b/notebooks/test_basics.ipynb
@@ -625,6 +625,198 @@
     "file = ub.loads(sample_yaml_file)\n",
     "print(file)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "test dataset split:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using global temporary directory: /tmp/unibox_temp\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>age</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Alice</td>\n",
+       "      <td>25</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Bob</td>\n",
+       "      <td>30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Charlie</td>\n",
+       "      <td>35</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      name  age\n",
+       "0    Alice   25\n",
+       "1      Bob   30\n",
+       "2  Charlie   35"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import unibox as ub\n",
+    "import pandas as pd\n",
+    "\n",
+    "df = pd.DataFrame({\"name\": [\"Alice\", \"Bob\", \"Charlie\"], \"age\": [25, 30, 35]})\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[37m2025-02-16 14:02:17 [INFO] HuggingFaceDatasetsBackend.data_to_hub: Uploading dataset to HF repo datatmp/test_df\u001b[0m\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "3b88ce82074a4af68b1a421cecf61647",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Uploading the dataset shards:   0%|          | 0/1 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "ee9e696d8fea43da85b7c09335e4d7d0",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Creating parquet from Arrow format:   0%|          | 0/1 [00:00<?, ?ba/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[37m2025-02-16 14:02:21 [INFO] saves: DataFrame saved (HF dataset) to \"hf://datatmp/test_df\" in 3.30s\u001b[0m\n"
+     ]
+    }
+   ],
+   "source": [
+    "ub.saves(df, \"hf://datatmp/test_df\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('incantor/aesthetic_eagle_5category_iter99', '')"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def _parse_hf_uri(uri: str):\n",
+    "    \"\"\"Returns (repo_id, subpath) from 'hf://owner/repo/...'. If no subpath, returns ('owner/repo', '').\"\"\"\n",
+    "    trimmed = uri.replace(\"hf://\", \"\", 1)\n",
+    "    parts = trimmed.split(\"/\", 2)  # Split into at most three parts\n",
+    "    if len(parts) < 2:\n",
+    "        raise ValueError(f\"Invalid Hugging Face URI format: {uri}\")\n",
+    "    \n",
+    "    repo_id = f\"{parts[0]}/{parts[1]}\"  # First two parts make up the repo ID\n",
+    "    subpath = parts[2] if len(parts) > 2 else \"\"  # Remaining part is the subpath\n",
+    "\n",
+    "    return repo_id, subpath\n",
+    "\n",
+    "\n",
+    "\n",
+    "_parse_hf_uri(\"hf://incantor/aesthetic_eagle_5category_iter99\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('incantor', 'aesthetic_eagle_5category_iter99/file.parquet')"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "_parse_hf_uri(\"hf://incantor/aesthetic_eagle_5category_iter99/file.parquet\") # incantor/aesthetic_eagle_5category_iter99, file.parquet\n",
+    "\n",
+    "_parse_hf_uri(\"hf://incantor/aesthetic_eagle_5category_iter99\") # incantor/aesthetic_eagle_5category_iter99, \"\""
+   ]
   }
  ],
  "metadata": {
