feat: adding dataset split control when using ub.saves("hf://org/dataset_repo")

--- a/notebooks/test_basics.ipynb
+++ b/notebooks/test_basics.ipynb
@@ -635,16 +635,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Using global temporary directory: /tmp/unibox_temp\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -697,7 +690,7 @@
        "2  Charlie   35"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -712,20 +705,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[37m2025-02-16 14:02:17 [INFO] HuggingFaceDatasetsBackend.data_to_hub: Uploading dataset to HF repo datatmp/test_df\u001b[0m\n"
+      "\u001b[37m2025-02-16 14:07:50 [INFO] HuggingFaceDatasetsBackend.data_to_hub: Uploading dataset to HF repo datatmp/test_df\u001b[0m\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3b88ce82074a4af68b1a421cecf61647",
+       "model_id": "966c0eadd5e6485b914bbf2deadd9fd2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -739,7 +732,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ee9e696d8fea43da85b7c09335e4d7d0",
+       "model_id": "5db5f4ee1c4b4d79b3e653f11203976c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -754,12 +747,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[37m2025-02-16 14:02:21 [INFO] saves: DataFrame saved (HF dataset) to \"hf://datatmp/test_df\" in 3.30s\u001b[0m\n"
+      "\u001b[37m2025-02-16 14:07:52 [INFO] saves: DataFrame saved (HF dataset) to \"hf://datatmp/test_df\" in 1.84s\u001b[0m\n"
      ]
     }
    ],
    "source": [
-    "ub.saves(df, \"hf://datatmp/test_df\")"
+    "ub.saves(df, \"hf://datatmp/test_df\", hf_dataset_split=\"NOT_TEST\")"
    ]
   },
   {
