fix: s3 backend: missing arguments for ls

--- a/notebooks/test_basics.ipynb
+++ b/notebooks/test_basics.ipynb
@@ -635,9 +635,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using global temporary directory: /tmp/unibox_temp\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -690,7 +697,7 @@
        "2  Charlie   35"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -705,20 +712,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[37m2025-02-16 14:07:50 [INFO] HuggingFaceDatasetsBackend.data_to_hub: Uploading dataset to HF repo datatmp/test_df\u001b[0m\n"
+      "\u001b[37m2025-02-16 14:11:21 [INFO] HuggingFaceDatasetsBackend.data_to_hub: Uploading dataset to HF repo datatmp/test_df2\u001b[0m\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "966c0eadd5e6485b914bbf2deadd9fd2",
+       "model_id": "c92f357b8ffc4992baf1eb645490da7c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -732,7 +739,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5db5f4ee1c4b4d79b3e653f11203976c",
+       "model_id": "5997c668568144388af81b17bdb532f4",
        "version_major": 2,
        "version_minor": 0
       },
@@ -747,12 +754,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[37m2025-02-16 14:07:52 [INFO] saves: DataFrame saved (HF dataset) to \"hf://datatmp/test_df\" in 1.84s\u001b[0m\n"
+      "\u001b[37m2025-02-16 14:11:23 [INFO] saves: DataFrame saved (HF dataset) to \"hf://datatmp/test_df2\" in 1.63s\u001b[0m\n"
      ]
     }
    ],
    "source": [
-    "ub.saves(df, \"hf://datatmp/test_df\", hf_dataset_split=\"NOT_TEST\")"
+    "ub.saves(df, \"hf://datatmp/test_df2\", split=\"bla_bla\", private=False)"
    ]
   },
   {
